--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "es6",
         "module": "commonjs",
         "declaration": true,
         "pretty": true,
@@ -27,9 +27,8 @@
         "types": ["node"],
         "paths": {
             "@src/*": ["./*"],
-            "@types/*": ["types/*"],
-            "@utils/*": ["utils/*"],
-            "@bot/*": ["bot/*"]
+            "@types/*": ["./src/types/*"],
+            "@bot/*": ["./src/bot/*"]
         },
         "lib": [
             "es5",
@@ -49,6 +48,5 @@
         ]
     },
     "compileOnSave": true,
-    "include": ["src"],
-    "exclude": ["node_modules"]
+    "include": ["src"]
 }
