👽️ Skip lib check due to dependencies issues
whatsapp-web-js has some JSDoc issues that are making our build step crash

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "dist/*"
     ],
     "scripts": {
-        "build": "tsc",
+        "build": "tsc --skipLibCheck",
         "lint": "eslint src",
         "lint:fix": "eslint src --fix",
         "prettier": "prettier --check src",
